SourceMetaData/src/objects/SLA__c.object
<CustomObject>
    <description>A record of the available SLAs that can be applied to Goals and Tickets</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is the SLA currently active</description>
        <inlineHelpText>Is the SLA currently active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Acknowledgement_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>If the SLA requires a customer acknowledgement within a certain number of days after commencement this should be specified here (0 for no acknowledgement required)</description>
        <inlineHelpText>If the SLA requires a customer acknowledgement within a certain number of days after commencement this should be specified here (0 for no acknowledgement required)</inlineHelpText>
        <label>Customer Acknowledgement (Days)</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>An optional description of the SLA (eg to describe what it is used for)</description>
        <inlineHelpText>An optional description of the SLA (eg to describe what it is used for)</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Escalation_Prior_to_SLA_Breach_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>If the record should be escalated a set number of days prior to SLA breach (assuming it hasn&apos;t already been escalated or closed) then specify the number of days before the SLA breach that the record should be escalated here. (0 = no auto escalation required)</description>
        <inlineHelpText>The number of days before the SLA breach that the record should be escalated here. (0 = escalation required)</inlineHelpText>
        <label>Escalation Prior to SLA Breach (Days)</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Code__c</fullName>
        <description>A unique code number that can be used as a shorthand to identify the SLA.</description>
        <displayFormat>SLA{0000}</displayFormat>
        <inlineHelpText>A unique code number that can be used as a shorthand to identify the SLA.</inlineHelpText>
        <label>SLA Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SLA_Length_Days__c</fullName>
        <description>The length of the SLA in days</description>
        <label>SLA Length (Days)</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Working_Days__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checked if the SLA is measured in working days, unchecked if it is measured in calendar days.</description>
        <inlineHelpText>Checked if the SLA is measured in working days, unchecked if it is measured in calendar days.</inlineHelpText>
        <label>Working Days</label>
        <type>Checkbox</type>
    </fields>
    <label>SLA</label>
    <listViews>
        <fullName>AllActive</fullName>
        <columns>SLA_Code__c</columns>
        <columns>NAME</columns>
        <columns>Working_Days__c</columns>
        <columns>SLA_Length_Days__c</columns>
        <columns>Escalation_Prior_to_SLA_Breach_Days__c</columns>
        <columns>Customer_Acknowledgement_Days__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active SLAs</label>
    </listViews>
    <nameField>
        <label>SLA Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>Case_00Nb0000003ehgrEAA</fullName>
        <active>true</active>
        <errorMessage>Please select an active SLA.</errorMessage>
        <field>Case.SLA__c</field>
        <filterItems>
            <field>SLA__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Case_SLA</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ib0000000IJNqEAO_00Nb0000003ejYfEAI</fullName>
        <active>false</active>
        <field>Ticket__c.GLOBAL_SLA__c</field>
        <filterItems>
            <field>SLA__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Please select an active SLA.</infoMessage>
        <isOptional>true</isOptional>
        <name>Ticket_SLA</name>
    </namedFilters>
    <pluralLabel>SLAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>